# zlib

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: clippy.yml  tests.yml
src/: bitreader.rs  bitwriter.rs  compress.rs  decompress.rs  huffman.rs  lz77.rs  zlib.rs
src/zlib/: adler.rs  bitreader.rs  bitwriter.rs  compress.rs  decompress.rs  huffman.rs  lz77.rs  mod.rs
tests/: test_zlib.rs
