[package]
name = "mini_git"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
description = "A smaller re-implementation of the Git VCS"
authors = ["M K <mkpro118@gmail.com>"]
license = "MIT"
repository = "https://github.com/mkpro118/doc-buildr"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
