[package]
name = "zlib"
version = "0.1.1"
edition = "2021"
rust-version = "1.79"
description = "A smaller re-implementation of Zlib compression and decompression"
authors = ["M K <mkpro118@gmail.com>"]
license = "MIT"
repository = "https://github.com/mkpro118/zlib"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
